[gd_scene load_steps=9 format=2]

[ext_resource path="res://Script/Game_Scene.gd" type="Script" id=1]
[ext_resource path="res://Scene/Components/roaming_control.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scene/Components/chest_event.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scene/Components/rest_event.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scene/Components/elite_event.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scene/Components/trap_event.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scene/Components/fight_event.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scene/Components/shop_event.tscn" type="PackedScene" id=8]

[node name="game_scene" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="roaming_control" parent="." instance=ExtResource( 2 )]
visible = false

[node name="chest_event" parent="." instance=ExtResource( 3 )]
visible = false

[node name="rest_event" parent="." instance=ExtResource( 4 )]
visible = false

[node name="elite_event" parent="." instance=ExtResource( 5 )]
visible = false

[node name="shop_event" parent="." instance=ExtResource( 8 )]
visible = false

[node name="trap_event" parent="." instance=ExtResource( 6 )]
visible = false

[node name="fight_event" parent="." instance=ExtResource( 7 )]
visible = false
